# fangs

./: .gitignore  .justfile  README.md  fangs.Rproj  justfile
fangs/: .Rbuildignore  .gitignore  DESCRIPTION  INSTALL  LICENSE  LICENSE.note  NAMESPACE  NEWS  configure
fangs/R/: compute_expected_loss.R  compute_loss.R  fangs.R  fangs2.R  onLoad.R  roxido.R  rustlib.R  samplesFA.R  sweeten.R  useDynLib.R  vendored.R
fangs/data/: samplesFA.RData
fangs/inst/: AUTHORS  COPYRIGHT  LICENSE.note
fangs/man/: compute_expected_loss.Rd  compute_loss.Rd  fangs.Rd  fangs2.Rd  fangs_old.Rd  samplesFA.Rd  sweeten.Rd
fangs/src/: shim.c
fangs/src/rust/: .gitignore  Cargo.toml  vendor.tar.xz
fangs/src/rust/lapjv-rust/: Cargo.toml  README-DBD.md  README-dahl.md
fangs/src/rust/roxido/src/: r.rs
fangs/src/rust/roxido_macro/src/: lib.rs
fangs/src/rust/src/: lib.rs  registration.rs
fangs/src/rustlib/: Cargo.toml
fangs/src/rustlib/roxido/: Cargo.toml
fangs/src/rustlib/roxido/src/: lib.rs  r.rs  rbindings.rs
fangs/src/rustlib/roxido_macro/: Cargo.toml
fangs/src/rustlib/src/: lib.rs  registration.rs  timers.rs
fangs/tools/: cargo_run.R  helpers.R  registration.R  staticlib.R
scratch/: demo.R
