[package]
name = "rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
roxido = { path="roxido" }
lapjv = { path="lapjv-rust" }
ndarray = "0.15.6"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.7.0"
itertools = "0.11.0"
approx = "0.5.1"
