[package]
name = "rustlib"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
roxido = { path="roxido" }
munkres = "0.5.2"
lapjv = "0.2.0"
ndarray = "0.15.3"
num-traits = "0.2.14"
rand = "0.8.3"
rand_pcg = "0.3.0"
rand_distr = "0.4.1"
rayon = "1.5.1"
